<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionOne"
                android:textColor="@android:color/black" />

            <RadioGroup
                style="@style/group_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option1" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option2" />

                <RadioButton
                    android:id="@+id/question1_option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option3" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo"
                android:textColor="@android:color/black" />

            <RadioGroup
                style="@style/group_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question2_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option1" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option2" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option3" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionThree"
                android:textColor="@android:color/black" />

            <RadioGroup
                style="@style/group_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_option1" />

                <RadioButton
                    android:id="@+id/question3_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_option2" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_option3" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_option4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionFour"
                android:textColor="@android:color/black" />

            <LinearLayout
                style="@style/group_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/question4_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option1" />

                <CheckBox
                    android:id="@+id/question4_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option2" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option3" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option4" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/questionFive"
                android:textColor="@android:color/black" />

            <LinearLayout
                style="@style/group_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/question5_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_option1" />

                <CheckBox
                    android:id="@+id/question5_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_option2" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_option3" />

                <CheckBox
                    android:id="@+id/question5_option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_option4" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/questionSix"
                android:textColor="@android:color/black" />

            <EditText
                android:inputType="number"
                android:id="@+id/input_ans_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_answer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/questionSeven"
                android:textColor="@android:color/black" />

            <EditText
                android:inputType="text"
                android:id="@+id/input_ans_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_answer" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/question_textview_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/questionEight"
                android:textColor="@android:color/black" />

            <EditText
                android:inputType="text"
                android:id="@+id/input_ans_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_answer" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_quiz"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/colorPrimary"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>